fix(winning-line): fix css for firefox

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div id="game-container" #gameContainer *ngIf="!loading">
-  <div id="winning-line" class="{{!!state.winningLine ? state.winningLine : 'hidden-line'}}"></div>
+  <div id="winning-line-wrapper">
+    <div id="winning-line" class="{{!!state.winningLine ? state.winningLine : 'hidden-line'}}"></div>
+  </div>
   <div *ngFor="let colIndex of columns;" class="cell-container" (click)="makeStep(colIndex)">
     <div class="cell-container-content">{{state.board[colIndex]}}</div>
   </div>
