--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,6 @@
 #game-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
   flex-wrap: wrap;
   margin: 0 auto;
   max-width: 600px;
@@ -44,9 +43,14 @@
   background: steelblue;
 }
 
-/*
- TODO adjust line to when won
-*/
+#winning-line-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  position: absolute;
+}
+
 #winning-line {
   width: 100%;
   background: red;
